RLS: Add sticky elements to LFV::viewport_constrained_objects_.

The code to do this was behind an "if (!RLS)" block, which was added by
http://crrev.com/437671, but we need it with RLS also.  Otherwise, non-
composited sticky elements don't force main-thread scrolling, and jitter
as the compositor tries to scroll them.

This fix causes a test to reveal an existing bug in LayoutGeometryMap
(see crbug.com/821216).

Bug: 820921
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I0227b994fcabb84b3edbaa4c73943667a88b1ea5
Reviewed-on: https://chromium-review.googlesource.com/959567
Commit-Queue: Steve Kobes <skobes@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543244}
Former-commit-id: 1ae2a0ff5e84c0d29c84f02f02a1fe3d5cdd4b22