third_party/WebKit/Source/core/paint/compositing/CompositingInputsUpdater.cpp
@@ -47,27 +47,25 @@ void CompositingInputsUpdater::UpdateRecursive(PaintLayer* layer,
   layer->UpdateAncestorOverflowLayer(info.last_overflow_clip_layer);
   if (info.last_overflow_clip_layer && layer->NeedsCompositingInputsUpdate() &&
       style.HasStickyConstrainedPosition()) {
-    if (!RuntimeEnabledFeatures::RootLayerScrollingEnabled()) {
-      if (info.last_overflow_clip_layer != previous_overflow_layer) {
-        // Old ancestor scroller should no longer have these constraints.
-        DCHECK(!previous_overflow_layer ||
-               !previous_overflow_layer->GetScrollableArea() ||
-               !previous_overflow_layer->GetScrollableArea()
-                    ->GetStickyConstraintsMap()
-                    .Contains(layer));
+    if (info.last_overflow_clip_layer != previous_overflow_layer) {
+      // Old ancestor scroller should no longer have these constraints.
+      DCHECK(!previous_overflow_layer ||
+             !previous_overflow_layer->GetScrollableArea() ||
+             !previous_overflow_layer->GetScrollableArea()
+                  ->GetStickyConstraintsMap()
+                  .Contains(layer));
 
-        // If our ancestor scroller has changed and the previous one was the
-        // root layer, we are no longer viewport constrained.
-        if (previous_overflow_layer && previous_overflow_layer->IsRootLayer()) {
-          layout_object.View()->GetFrameView()->RemoveViewportConstrainedObject(
-              layout_object);
-        }
-      }
-
-      if (info.last_overflow_clip_layer->IsRootLayer()) {
-        layout_object.View()->GetFrameView()->AddViewportConstrainedObject(
+      // If our ancestor scroller has changed and the previous one was the
+      // root layer, we are no longer viewport constrained.
+      if (previous_overflow_layer && previous_overflow_layer->IsRootLayer()) {
+        layout_object.View()->GetFrameView()->RemoveViewportConstrainedObject(
             layout_object);
       }
+    }
+
+    if (info.last_overflow_clip_layer->IsRootLayer()) {
+      layout_object.View()->GetFrameView()->AddViewportConstrainedObject(
+          layout_object);
     }
     layout_object.UpdateStickyPositionConstraints();
 
